--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Pollenkontrollen",
-    "short_name": "PollenK",
+    "short_name": "Pollen",
     "icons": [
         {
             "src": "/assets/icons/android-chrome-192x192.png",
