--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "5.2.9",
+    "@angular/cdk": "^5.2.0",
     "@angular/common": "5.2.9",
     "@angular/compiler": "5.2.9",
-    "@angular/cdk": "^5.2.0",
     "@angular/core": "5.2.9",
     "@angular/forms": "5.2.9",
     "@angular/http": "5.2.9",
@@ -24,7 +24,9 @@
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
     "@angular/router": "5.2.9",
+    "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
+    "firebase": "^4.12.1",
     "hammerjs": "^2.0.8",
     "normalize.css": "^5.0.0",
     "rxjs": "^5.5.8",
